@@ -1,4 +1,5 @@
 Development
+	Make mouse disappear when panel disappears
 	Make control panel disappear in FS mode after 5 seconds of no mouse movement
 	More shortcuts
 	Some GUI Polish
